Bake to Vertex Colors causes Blender to crash (app completely disappears) #85550

Closed
opened 2021-02-11 13:19:50 +01:00 by James Ovnik · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71

Blender Version
Broken: version: 2.92.0 Beta, branch: master, commit date: 2021-02-10 21:35, hash: 2d252b6d26
Worked: All versions of 2.92. The operation is successful on very simple geometry but fails on more complex meshes

Short description of error
When using the Cycles bake to "Vertex Colors" feature (all bake types tested Diffuse/Glossy/AO etc) Blender instantly crashes upon clicking the "Bake" button

Exact steps for others to reproduce the error
Load included .blend file, select the mesh. Press "Bake" under Cycles panel. (The bake type has been set to AO but can be changed to any other type, all result in a crash)VertexBake_Test.blend

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2080 SUPER/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 456.71 **Blender Version** Broken: version: 2.92.0 Beta, branch: master, commit date: 2021-02-10 21:35, hash: `2d252b6d26` Worked: All versions of 2.92. The operation is successful on very simple geometry but fails on more complex meshes **Short description of error** When using the Cycles bake to "Vertex Colors" feature (all bake types tested Diffuse/Glossy/AO etc) Blender instantly crashes upon clicking the "Bake" button **Exact steps for others to reproduce the error** Load included .blend file, select the mesh. Press "Bake" under Cycles panel. (The bake type has been set to AO but can be changed to any other type, all result in a crash)[VertexBake_Test.blend](https://archive.blender.org/developer/F9791904/VertexBake_Test.blend)
Author

Added subscriber: @JamesOvnik

Added subscriber: @JamesOvnik
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, will check.

Can confirm, will check.
Member

Hm, only crashed on the first run, subsequent runs were fine...
Sounds a bit like #85530 (Crashes during render)

Hm, only crashed on the first run, subsequent runs were fine... Sounds a bit like #85530 (Crashes during render)
Author

Interesting, I've tried 5 attempts in succession (Load Blender, load file, select mesh, press bake......then Blender crashes) and crashed everytime. Also tried switching to CPU vs GPU but crash still occurs.

Interesting, I've tried 5 attempts in succession (Load Blender, load file, select mesh, press bake......then Blender crashes) and crashed everytime. Also tried switching to CPU vs GPU but crash still occurs.

Added subscriber: @rjg

Added subscriber: @rjg

I haven't had time to create a debug build with ASAN of current master or blender-v2.92-release but 2.93.0 Alpha, branch: master, commit date: 2021-02-04 10:31, hash: dff51d418a appears to have a heap-buffer overflow.

## 3811==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x7fffc63ff068 at pc 0x000008d22262 bp 0x7fffc07ba830 sp 0x7fffc07ba820
READ of size 4 at 0x7fffc63ff068 thread #14
    - 0 0x8d22261 in bake_targets_populate_pixels_vertex_colors /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:992
    - 1 0x8d23d81 in bake_targets_populate_pixels /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1121
    - 2 0x8d257c7 in bake /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1270
    - 3 0x8d2c196 in bake_startjob /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1707
    - 4 0x50a34f5 in do_job_thread /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:389
    - 5 0x1936e4b1 in tslot_thread_start /home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/threads.cc:231
    - 6 0x7ffff7564608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477
    - 7 0x7ffff6f44292 in __clone (/lib/x86_64-linux-gnu/libc.so.6+0x122292)

0x7fffc63ff068 is located 0 bytes to the right of 6985832-byte region [0x7fffc5d55800,0x7fffc63ff068)
allocated by thread #14 here:
    - 0 0x7ffff7690bc8 in malloc (/lib/x86_64-linux-gnu/libasan.so.5+0x10dbc8)
    - 1 0x19399930 in MEM_lockfree_mallocN /home/dev/01-data/01-git/blender-git/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:276
    - 2 0x8d252a3 in bake /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1248
    - 3 0x8d2c196 in bake_startjob /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1707
    - 4 0x50a34f5 in do_job_thread /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:389
    - 5 0x1936e4b1 in tslot_thread_start /home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/threads.cc:231
    #6 0x7ffff7564608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477

Thread #14 created by T0 here:
    - 0 0x7ffff75bd805 in pthread_create (/lib/x86_64-linux-gnu/libasan.so.5+0x3a805)
    - 1 0x1936e6dd in BLI_threadpool_insert /home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/threads.cc:245
    - 2 0x50a451a in WM_jobs_start /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:484
    - 3 0x8d2ee50 in bake_invoke /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1870
    - 4 0x503aad6 in wm_operator_invoke /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1320
    - 5 0x503ca0e in wm_operator_call_internal /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1527
    - 6 0x503cc6d in WM_operator_name_call_ptr /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1575
    - 7 0x9500435 in ui_apply_but_funcs_after /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_handlers.c:936
    - 8 0x958a572 in ui_handler_region_menu /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_handlers.c:10856
    - 9 0x5034277 in wm_handler_ui_call /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:663
    - 10 0x504a3eb in wm_handlers_do_intern /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2798
    - 11 0x504b572 in wm_handlers_do /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2908
    - 12 0x5050c79 in wm_event_do_handlers /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3331
    - 13 0x501db9f in WM_main /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:637
    - 14 0x355ebba in main /home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522
    - 15 0x7ffff6e490b2 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x270b2)

SUMMARY: AddressSanitizer: heap-buffer-overflow /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:992 in bake_targets_populate_pixels_vertex_colors
Shadow bytes around the buggy address:
  0x100078c77db0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100078c77dc0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100078c77dd0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100078c77de0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
  0x100078c77df0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00
# >0x100078c77e00: 00 00 00 00 00 00 00 00 00 00 00 00 00[fa]fa fa
  0x100078c77e10: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x100078c77e20: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x100078c77e30: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x100078c77e40: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
  0x100078c77e50: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa
Shadow byte legend (one shadow byte represents 8 application bytes):

Addressable: 00
Partially addressable: 01 02 03 04 05 06 07
Heap left redzone: fa
Freed heap region: fd
Stack left redzone: f1
Stack mid redzone: f2
Stack right redzone: f3
Stack after return: f5
Stack use after scope: f8
Global redzone: f9
Global init order: f6
Poisoned by user: f7
Container overflow: fc
Array cookie: ac
Intra object redzone: bb
ASan internal: fe
Left alloca redzone: ca
Right alloca redzone: cb
Shadow gap: cc

I haven't had time to create a debug build with ASAN of current master or `blender-v2.92-release` but 2.93.0 Alpha, branch: master, commit date: 2021-02-04 10:31, hash: `dff51d418a` appears to have a heap-buffer overflow. ```lines ## 3811==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x7fffc63ff068 at pc 0x000008d22262 bp 0x7fffc07ba830 sp 0x7fffc07ba820 READ of size 4 at 0x7fffc63ff068 thread #14 - 0 0x8d22261 in bake_targets_populate_pixels_vertex_colors /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:992 - 1 0x8d23d81 in bake_targets_populate_pixels /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1121 - 2 0x8d257c7 in bake /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1270 - 3 0x8d2c196 in bake_startjob /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1707 - 4 0x50a34f5 in do_job_thread /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:389 - 5 0x1936e4b1 in tslot_thread_start /home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/threads.cc:231 - 6 0x7ffff7564608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477 - 7 0x7ffff6f44292 in __clone (/lib/x86_64-linux-gnu/libc.so.6+0x122292) 0x7fffc63ff068 is located 0 bytes to the right of 6985832-byte region [0x7fffc5d55800,0x7fffc63ff068) allocated by thread #14 here: - 0 0x7ffff7690bc8 in malloc (/lib/x86_64-linux-gnu/libasan.so.5+0x10dbc8) - 1 0x19399930 in MEM_lockfree_mallocN /home/dev/01-data/01-git/blender-git/blender/intern/guardedalloc/intern/mallocn_lockfree_impl.c:276 - 2 0x8d252a3 in bake /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1248 - 3 0x8d2c196 in bake_startjob /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1707 - 4 0x50a34f5 in do_job_thread /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:389 - 5 0x1936e4b1 in tslot_thread_start /home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/threads.cc:231 #6 0x7ffff7564608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477 Thread #14 created by T0 here: - 0 0x7ffff75bd805 in pthread_create (/lib/x86_64-linux-gnu/libasan.so.5+0x3a805) - 1 0x1936e6dd in BLI_threadpool_insert /home/dev/01-data/01-git/blender-git/blender/source/blender/blenlib/intern/threads.cc:245 - 2 0x50a451a in WM_jobs_start /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_jobs.c:484 - 3 0x8d2ee50 in bake_invoke /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:1870 - 4 0x503aad6 in wm_operator_invoke /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1320 - 5 0x503ca0e in wm_operator_call_internal /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1527 - 6 0x503cc6d in WM_operator_name_call_ptr /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:1575 - 7 0x9500435 in ui_apply_but_funcs_after /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_handlers.c:936 - 8 0x958a572 in ui_handler_region_menu /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/interface/interface_handlers.c:10856 - 9 0x5034277 in wm_handler_ui_call /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:663 - 10 0x504a3eb in wm_handlers_do_intern /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2798 - 11 0x504b572 in wm_handlers_do /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:2908 - 12 0x5050c79 in wm_event_do_handlers /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm_event_system.c:3331 - 13 0x501db9f in WM_main /home/dev/01-data/01-git/blender-git/blender/source/blender/windowmanager/intern/wm.c:637 - 14 0x355ebba in main /home/dev/01-data/01-git/blender-git/blender/source/creator/creator.c:522 - 15 0x7ffff6e490b2 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x270b2) SUMMARY: AddressSanitizer: heap-buffer-overflow /home/dev/01-data/01-git/blender-git/blender/source/blender/editors/object/object_bake_api.c:992 in bake_targets_populate_pixels_vertex_colors Shadow bytes around the buggy address: 0x100078c77db0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x100078c77dc0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x100078c77dd0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x100078c77de0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 0x100078c77df0: 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 00 # >0x100078c77e00: 00 00 00 00 00 00 00 00 00 00 00 00 00[fa]fa fa 0x100078c77e10: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x100078c77e20: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x100078c77e30: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x100078c77e40: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa 0x100078c77e50: fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa fa Shadow byte legend (one shadow byte represents 8 application bytes): ``` Addressable: 00 Partially addressable: 01 02 03 04 05 06 07 Heap left redzone: fa Freed heap region: fd Stack left redzone: f1 Stack mid redzone: f2 Stack right redzone: f3 Stack after return: f5 Stack use after scope: f8 Global redzone: f9 Global init order: f6 Poisoned by user: f7 Container overflow: fc Array cookie: ac Intra object redzone: bb ASan internal: fe Left alloca redzone: ca Right alloca redzone: cb Shadow gap: cc ```
Philipp Oeser self-assigned this 2021-02-11 15:55:31 +01:00

This issue was referenced by 9febda912b

This issue was referenced by 9febda912b04559277d465b9610334c04a73d2ce

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

This issue was referenced by None@62557

This issue was referenced by None@62557

Added subscriber: @GPVFX_SB

Added subscriber: @GPVFX_SB
Thomas Dinges added this to the 2.92 milestone 2023-02-08 16:14:50 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85550
No description provided.